Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <p>Note : This repository and the list of algorithms will be updated continuously.</p>
 
+<p>You can visit my blog anytime for more stuffs : <a href="http://ace139.github.io">http://ace139.github.io</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Ace139/Algorithms-in-C">Algorithms in C</a> is maintained by <a href="https://github.com/Ace139">Ace139</a>.</span>
 
