Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <li>Binary Search using Iterataion (<strong>bsearch2.c</strong>)</li>
 <li>Selection Sort (<strong>selection.c</strong>)</li>
 <li>Bubble Sort (<strong>bubble.c</strong>)</li>
+<li>Insertion Sort (<strong>insertion.c</strong>)</li>
 </ul>
 
 <p>Note : This repository and the list of algorithms will be updated continuously.</p>
